Add icon for MonthYearPickerDialog. Optimize code and design

--- a/app/src/main/res/layout/fragment_client_form.xml
+++ b/app/src/main/res/layout/fragment_client_form.xml
@@ -272,8 +272,7 @@
                 android:id="@+id/btn_save"
                 style="@style/Button"
                 android:layout_marginVertical="@dimen/margin"
-                android:text="@string/client_form_action_save"
-                app:backgroundTint="@color/gold" />
+                android:text="@string/client_form_action_save" />
 
         </LinearLayout>
     </ScrollView>
