--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,6 +27,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/buttonTextSize</item>
         <item name="android:elevation">0dp</item>
+        <item name="backgroundTint">@color/gold</item>
     </style>
 
     <!--Client form-->
@@ -102,6 +103,14 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimary</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <!--Number Picker-->
+    <style name="NumberPicker">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/buttonMargin</item>
+        <item name="android:solidColor">@color/light_gold</item>
     </style>
 
     <!--Time Picker-->
