--- a/app/src/main/res/layout/event_item_view.xml
+++ b/app/src/main/res/layout/event_item_view.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="?attr/selectableItemBackground"
     android:padding="20dp">
 
@@ -42,9 +42,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:paddingHorizontal="4dp"
+            android:paddingBottom="4dp"
             android:src="@drawable/ic_delete"
             android:textColor="@color/black"
-            android:textSize="20sp"
             app:tint="@color/gold" />
 
     </LinearLayout>
