--- a/app/src/main/res/layout/calendar_day.xml
+++ b/app/src/main/res/layout/calendar_day.xml
@@ -3,13 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="180dp"
     android:layout_margin="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="120dp"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <!--Day of month-->
