Fix edge to edge design for Android 10 and Android 16

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,13 @@
         android:id="@+id/bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/gold"
         android:fitsSystemWindows="true"
         app:elevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:liftOnScroll="false">
 
         <!--Toolbar-->
         <androidx.appcompat.widget.Toolbar
@@ -55,7 +57,7 @@
             android:id="@+id/bottom_navigation"
             style="@style/BottomNavigation"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:background="@color/background"
             app:itemIconTint="@color/gold"
