--- a/app/src/main/res/layout/fragment_client_form.xml
+++ b/app/src/main/res/layout/fragment_client_form.xml
@@ -181,7 +181,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_frequency_text"
                     style="@style/FormText"
-                    android:inputType="number"/>
+                    android:inputType="number" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -204,7 +204,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="8dp"
+                android:layout_marginVertical="4dp"
                 android:orientation="vertical">
 
                 <TextView
@@ -265,6 +265,16 @@
                 </RadioGroup>
 
             </LinearLayout>
+
+            <!--Privacy / Consent-->
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/cb_accept_terms"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="4dp"
+                android:text="@string/client_form_accept_terms"
+                android:textSize="@dimen/textSize"
+                app:buttonTint="@color/gold" />
 
             <!--Button save-->
             <Button
