Add privacy_policy pdf and optimize code

--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -72,8 +72,7 @@
         android:id="@+id/clientFormFragment"
         android:label="@string/client_form_title"
         android:name="ivan.pacheco.cristinalozanobeauty.presentation.client.form.ClientFormFragment"
-        tools:layout="@layout/fragment_client_form">
-    </fragment>
+        tools:layout="@layout/fragment_client_form" />
 
     <!--PDF Sign-->
     <fragment
