--- a/app/src/main/res/layout/fragment_client_detail.xml
+++ b/app/src/main/res/layout/fragment_client_detail.xml
@@ -181,7 +181,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_frequency_text"
                     style="@style/FormText"
-                    android:inputType="number"/>
+                    android:inputType="number" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -265,32 +265,58 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                <RadioGroup
-                    android:id="@+id/rg_has_poor_coagulation"
-                    style="@style/FormRadioGroup">
+                    <RadioGroup
+                        android:id="@+id/rg_has_poor_coagulation"
+                        style="@style/FormRadioGroup">
 
-                    <RadioButton
-                        android:id="@+id/rb_poor_coagulation_yes"
-                        style="@style/FormRadioButton"
-                        android:text="@string/yes"
-                        app:buttonTint="@color/gold" />
+                        <RadioButton
+                            android:id="@+id/rb_poor_coagulation_yes"
+                            style="@style/FormRadioButton"
+                            android:text="@string/yes"
+                            app:buttonTint="@color/gold" />
 
-                    <RadioButton
-                        android:id="@+id/rb_poor_coagulation_no"
-                        style="@style/FormRadioButton"
-                        android:layout_marginStart="@dimen/rbMargin"
-                        android:text="@string/no"
-                        app:buttonTint="@color/gold" />
-                </RadioGroup>
+                        <RadioButton
+                            android:id="@+id/rb_poor_coagulation_no"
+                            style="@style/FormRadioButton"
+                            android:layout_marginStart="@dimen/rbMargin"
+                            android:text="@string/no"
+                            app:buttonTint="@color/gold" />
+                    </RadioGroup>
 
-                <ImageView
-                    android:id="@+id/btn_event_history"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/ic_events"
-                    app:tint="@color/gold" />
+                    <ImageView
+                        android:id="@+id/btn_event_history"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/ic_events"
+                        app:tint="@color/gold" />
 
                 </LinearLayout>
+
+            </LinearLayout>
+
+            <!--Signin document-->
+            <LinearLayout
+                android:id="@+id/layout_minor_consent"
+                style="@style/Form"
+                android:layout_gravity="center"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/txt_pdf_sign"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textColor="@color/gold"
+                    android:textSize="@dimen/textSize" />
+
+                <!--Button delete-->
+                <ImageView
+                    android:id="@+id/btn_delete"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/ic_delete"
+                    app:tint="@color/gold" />
 
             </LinearLayout>
 
@@ -302,16 +328,7 @@
                 android:text="@string/client_detail_action_disabled"
                 android:textSize="@dimen/textSize"
                 app:thumbTint="@color/switch_thumb_tint"
-                app:trackTint="@color/switch_track_tint"/>
-
-            <!--Signin document-->
-            <TextView
-                android:id="@+id/txt_pdf_sign"
-                style="@style/FormText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Aceptar consentimiento menor de edad"
-                android:textSize="@dimen/textSize" />
+                app:trackTint="@color/switch_track_tint" />
 
             <!--Button save-->
             <Button
